[gd_scene load_steps=9 format=3 uid="uid://ship_interaction_vr_test"]

[ext_resource type="Script" path="res://scenes/features/ship_interaction_test_vr.gd" id="1_test"]
[ext_resource type="PackedScene" uid="uid://cockpit_model_001" path="res://scenes/spacecraft/cockpit_model.tscn" id="2_ship"]

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(50, 0.5, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.6, 0.6, 0.7, 1)
metallic = 0.0
roughness = 0.8

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(50, 0.5, 50)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.3
height = 1.8

[sub_resource type="Environment" id="Environment_vr"]
background_mode = 1
background_color = Color(0.5, 0.7, 1.0, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 1.5

[sub_resource type="LabelSettings" id="LabelSettings_status"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="ShipInteractionTestVR" type="Node3D"]
script = ExtResource("1_test")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0)
light_energy = 2.0
light_indirect_energy = 1.5
shadow_enabled = true

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_floor")
surface_material_override/0 = SubResource("StandardMaterial3D_floor")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="CockpitModel" parent="." instance=ExtResource("2_ship")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -2)

[node name="XROrigin3D" type="XROrigin3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Player" type="CharacterBody3D" parent="XROrigin3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_player")

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="LeftController" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"
pose = &"aim"

[node name="RightController" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
pose = &"aim"

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -300.0
offset_right = 600.0
offset_bottom = -20.0
grow_vertical = 0
text = "Ship Interaction Test (VR)
Status information will appear here"
label_settings = SubResource("LabelSettings_status")
